@@ -47,14 +47,19 @@
 #'
 #' # Remove AM above 3 Hz from a bit of speech (remove most temporal details)
 #' s_filt1 = filterSoundByMS(target, samplingRate = samplingRate,
-#'   amCond = 'abs(am) > 3', nIter = 15)
+#'   amCond = 'abs(am) > 3', action = 'remove', nIter = 15)
 #' playme(s_filt1, samplingRate)
 #' spectrogram(s_filt1, samplingRate = samplingRate, osc = TRUE)
 #'
-#' # Remove slow AM/FM (prosody) to achieve a "robotic" voice
+#' # Barely any change when AM in 5-25 Hz is preserved:
 #' s_filt2 = filterSoundByMS(target, samplingRate = samplingRate,
-#'   jointCond = 'am^2 + (fm*3)^2 < 300', nIter = 15)
+#'   amCond = 'abs(am) > 5 & abs(am) < 25', action = 'preserve', nIter = 15)
 #' playme(s_filt2, samplingRate)
+#'
+#' # Remove slow AM/FM (prosody) to achieve a "robotic" voice
+#' s_filt3 = filterSoundByMS(target, samplingRate = samplingRate,
+#'   jointCond = 'am^2 + (fm*3)^2 < 300', nIter = 15)
+#' playme(s_filt3, samplingRate)
 #'
 #' ## An alternative manual workflow w/o calling filterSoundByMS()
 #' # This way you can modify the MS directly and more flexibly
@@ -178,7 +183,7 @@ filterSoundByMS = function(
   # Filter as needed
   ms_filt = filterMS(ms, amCond = amCond, fmCond = fmCond,
                      jointCond = jointCond,
-                     action = 'remove', plot = FALSE)
+                     action = action, plot = FALSE)
 
   # Convert back to a spectrogram
   spec_filt = msToSpec(ms_filt, windowLength = windowLength, step = step)
@@ -460,22 +465,10 @@ msToSpec = function(ms, windowLength = NULL, step = NULL) {
       windowLength = max_fm * 2
     }
     # From the def in spectrogram():
-    # windowLength_points = windowLength * samplingRate / 1000
-    # Y = seq(bin_width / 2,
-    #   samplingRate / 2 - bin_width / 2,
-    #   length.out = nrow(s2)) / 1000
-    # So:
-    # bin_width = samplingRate / 2 / windowLength_points =
-    # = samplingRate / 2 / windowLength / samplingRate * 1000 =
-    # = 1 / 2 / windowLength * 1000 = 1000 / windowLength / 2
-    bin_width = 1000 / windowLength / 2
     windowLength_points = nrow(s2) * 2
     samplingRate = windowLength_points / windowLength * 1000
-
     # frequency stamps
-    rownames(s2) = seq(bin_width / 2,
-                       samplingRate / 2 - bin_width / 2,
-                       length.out = nrow(s2)) / 1000
+    rownames(s2) = (0:(nrow(s2) - 1)) * samplingRate / windowLength_points / 1000
     # time stamps
     colnames(s2) = windowLength / 2 + (0:(ncol(s2) - 1)) * step
   }
