@@ -114,14 +114,19 @@ spectrogram(target, samplingRate = samplingRate, osc = TRUE)
 
 # Remove AM above 3 Hz from a bit of speech (remove most temporal details)
 s_filt1 = filterSoundByMS(target, samplingRate = samplingRate,
-  amCond = 'abs(am) > 3', nIter = 15)
+  amCond = 'abs(am) > 3', action = 'remove', nIter = 15)
 playme(s_filt1, samplingRate)
 spectrogram(s_filt1, samplingRate = samplingRate, osc = TRUE)
 
-# Remove slow AM/FM (prosody) to achieve a "robotic" voice
+# Barely any change when AM in 5-25 Hz is preserved:
 s_filt2 = filterSoundByMS(target, samplingRate = samplingRate,
-  jointCond = 'am^2 + (fm*3)^2 < 300', nIter = 15)
+  amCond = 'abs(am) > 5 & abs(am) < 25', action = 'preserve', nIter = 15)
 playme(s_filt2, samplingRate)
+
+# Remove slow AM/FM (prosody) to achieve a "robotic" voice
+s_filt3 = filterSoundByMS(target, samplingRate = samplingRate,
+  jointCond = 'am^2 + (fm*3)^2 < 300', nIter = 15)
+playme(s_filt3, samplingRate)
 
 ## An alternative manual workflow w/o calling filterSoundByMS()
 # This way you can modify the MS directly and more flexibly
